[bug]#4794 set alignment on workspace icons

--- a/assets/themes/leo/css/modules.less
+++ b/assets/themes/leo/css/modules.less
@@ -1063,7 +1063,9 @@ i.unknown-large, i.doc-large{
   text-align: center;
 }
 i.unknown-large:before, i.doc-large:before{
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
   content: '\e850';
 }
 i.unknown, i.doc{
@@ -1075,13 +1077,14 @@ i.unknown:before, i.doc:before{
   content: '\e850';
 }
 
-
 i.xls-large{
   .fonticon;
   text-align: center;
 }
 i.xls-large:before{
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
   content: '\e881';
 }
 i.xls{
@@ -1098,7 +1101,9 @@ i.ppt-large{
   text-align: center;
 }
 i.ppt-large:before{
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
   content: '\e85f';
 }
 i.ppt{
@@ -1115,7 +1120,9 @@ i.pdf-large{
   text-align: center;
 }
 i.pdf-large:before{
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
   content: '\e857';
 }
 i.pdf{
@@ -1132,7 +1139,9 @@ i.video-large{
   text-align: center;
 }
 i.video-large:before{
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
   content: '\e872';
 }
 i.video{
@@ -1149,7 +1158,9 @@ i.word-large{
   text-align: center;
 }
 i.word-large:before{
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
   content: '\e880';
 }
 i.word{
@@ -1167,7 +1178,9 @@ i.folder-large{
 }
 i.folder-large:before{
   content: '\e846';
-  font-size: 35px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
 }
 i.folder{
   .fonticon;
@@ -1176,16 +1189,6 @@ i.folder{
 i.folder:before{
   content: '\e846';
   font-size: 18px;
-}
-
-
-i.img{
-  .fonticon;
-  text-align: center;
-}
-i.img:before{
-  content: '\e84a';
-  font-size: 20px;
 }
 
 i.zip{
@@ -1202,7 +1205,9 @@ i.zip-large{
 }
 i.zip-large:before{
   content: '\e81d';
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
 }
 
 i.audio{
@@ -1219,7 +1224,18 @@ i.audio-large{
 }
 i.audio-large:before{
   content: '\e839';
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
+}
+
+i.img{
+  .fonticon;
+  text-align: center;
+}
+i.img:before{
+  content: '\e84a';
+  font-size: 20px;
 }
 
 i.view{
