--- a/assets/themes/leo/dyslexic/theme.css
+++ b/assets/themes/leo/dyslexic/theme.css
@@ -7608,7 +7608,9 @@ i.doc-large {
 }
 i.unknown-large:before,
 i.doc-large:before {
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
   content: '\e850';
 }
 i.unknown,
@@ -7632,7 +7634,9 @@ i.xls-large {
   text-align: center;
 }
 i.xls-large:before {
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
   content: '\e881';
 }
 i.xls {
@@ -7654,7 +7658,9 @@ i.ppt-large {
   text-align: center;
 }
 i.ppt-large:before {
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
   content: '\e85f';
 }
 i.ppt {
@@ -7676,7 +7682,9 @@ i.pdf-large {
   text-align: center;
 }
 i.pdf-large:before {
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
   content: '\e857';
 }
 i.pdf {
@@ -7698,7 +7706,9 @@ i.video-large {
   text-align: center;
 }
 i.video-large:before {
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
   content: '\e872';
 }
 i.video {
@@ -7720,7 +7730,9 @@ i.word-large {
   text-align: center;
 }
 i.word-large:before {
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
   content: '\e880';
 }
 i.word {
@@ -7743,7 +7755,9 @@ i.folder-large {
 }
 i.folder-large:before {
   content: '\e846';
-  font-size: 35px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
 }
 i.folder {
   font-family: "fontello";
@@ -7755,17 +7769,6 @@ i.folder {
 i.folder:before {
   content: '\e846';
   font-size: 18px;
-}
-i.img {
-  font-family: "fontello";
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-image: none;
-  text-align: center;
-}
-i.img:before {
-  content: '\e84a';
-  font-size: 20px;
 }
 i.zip {
   font-family: "fontello";
@@ -7787,7 +7790,9 @@ i.zip-large {
 }
 i.zip-large:before {
   content: '\e81d';
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
 }
 i.audio {
   font-family: "fontello";
@@ -7809,7 +7814,20 @@ i.audio-large {
 }
 i.audio-large:before {
   content: '\e839';
-  font-size: 45px;
+  font-size: 50px;
+  display: block;
+  line-height: 67px;
+}
+i.img {
+  font-family: "fontello";
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-image: none;
+  text-align: center;
+}
+i.img:before {
+  content: '\e84a';
+  font-size: 20px;
 }
 i.view {
   font-family: "fontello";
